<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary1"
    tools:context="com.example.ksenia.myproject1_proect.MainActivity3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:orientation="vertical"
        android:background="@color/forme">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/forme"
            >

        </LinearLayout>

        <com.example.ksenia.myproject1_proect.MyEditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:background="@color/white"
            android:ems="10"
            android:paddingLeft="35dp"
            android:gravity="start"
            android:hint="@string/putyourcode"
            android:textSize="9pt"
            android:paddingStart="35dp"
             />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/forme">

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:orientation="vertical"
        android:background="@color/forme">

    </LinearLayout>


    <Button
        android:id="@+id/Button1"
        style="@style/AlertDialog.AppCompat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="18"
        android:background="@color/colorPrimary1"
        android:text="@string/translate"
        android:textSize="10pt"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="411dp" />
    <Button
        android:id="@+id/Button0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="18"
        android:background="@color/colorPrimaryDark"
        android:text="@string/menuprog"
        android:textSize="9pt"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="411dp" />

</LinearLayout>
